--- a/medical-clinics/src/main/resources/messages/messages.properties
+++ b/medical-clinics/src/main/resources/messages/messages.properties
@@ -3,7 +3,7 @@ not.blank=Field must not blank or to contain only white-spaces
 name.length=Name must be between 2 and 30 letters long.
 name.unsuported.characters=Name must be only in upper and lower case latin letters
 
-email.format.not.match=Unsuported email format
+email.format.not.match=Wrong email or unsuported format
 
 password.length=Password must be between 8 and 20 characters
 password.not.match=Password must contain at least one upper and one lower case letter one digit and one of the following characters: .!@#$%^&*()_+<>?
