Refactor models Dto and mappers add 4 new Dto and 1 mapper

--- a/medical-clinics/src/main/resources/messages/messages.properties
+++ b/medical-clinics/src/main/resources/messages/messages.properties
@@ -3,6 +3,15 @@ not.blank=Field must not blank or to contain only white-spaces
 name.length=Name must be between 2 and 30 letters long.
 name.unsuported.characters=Name must be only in upper and lower case latin letters
 
+country.length=Country name must be between 4 and 56 letters long
+country.unsuported.characters=Country name may contain spaces upper and lower case latin letters
+
+identification.code.length=Identification Code must be between 5 and 18 character length.
+identification.code.unsuported.character=Identification Code may contain upper case latin letters digits and separators (.-);
+
+phone.unsuported.characters=Phone number may or may not start with plus. And contain only digits;
+phone.length.length=Phone length must be between 4 and 21 symbols,
+
 email.format.not.match=Wrong email or unsuported format
 
 password.length=Password must be between 8 and 20 characters
