--- a/medical-clinics/src/main/resources/messages/messages.properties
+++ b/medical-clinics/src/main/resources/messages/messages.properties
@@ -1,18 +1,34 @@
 not.blank=Field must not blank or to contain only white-spaces
 
-name.length=Name must be between 2 and 30 letters long.
+valid.URL="Must be a valid URL"
+
+name.length=Name must be between 2 and 30 letters long
 name.unsupported.characters=Name must be only in upper and lower case latin letters
 
 country.length=Country name must be between 4 and 56 letters long
 country.unsupported.characters=Country name may contain spaces upper and lower case latin letters
 
-identification.code.length=Identification Code must be between 5 and 18 character length.
-identification.code.unsupported.character=Identification Code may contain upper case latin letters digits and separators (.-);
+identification.code.length=Identification Code must be between 5 and 18 character length
+identification.code.unsupported.character=Identification Code may contain upper case latin letters digits and separators (.-)
 
 phone.unsupported.characters=Phone number may or may not start with plus. And contain only digits;
 phone.length.length=Phone length must be between 4 and 21 symbols,
 
-email.format.not.match=Wrong email or unsuported format
+email.format.not.match=Wrong email or unsupported format
 
 password.length=Password must be between 8 and 20 characters
 password.not.match=Password must contain at least one upper and one lower case letter one digit and one of the following characters: .!@#$%^&*()_+<>?
+
+clinic.workdays.empty="Clinic must have at least one working day"
+
+diagnosis.length=Diagnosis must be between 5 and 255 character long
+diagnosis.unsupported.characters=Diagnosis may contain: hyphens, commas, dots, digits, spaces, upper and lower case latin letters
+
+diagnosis.code=Diagnosis must follow the pattern uppercase latin letter two digits dot digit. Example - F30.9
+
+UUID.valid=Must be valid UUID
+
+schedule.date=Day of the schedule must be in future
+schedule.interval=Timeslot duration must be between 15 and 60 minutes
+
+day.of.week=Day must be: Monday, Tuesday, Wednesday, Thursday, Friday, Saturday or Sunday. Word casing is ignored
